infra/k8s/posts-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts-backend
spec:
  containers: 
    - name: posts-backend
      image: post-backend:1.0.0
