infra/k8s/comment-backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-backend-depl                                   # Sets Name of deployment object
spec:
  replicas: 1                                                  # Mentions number of identical pod replicas to run
  selector:
    matchLabels:
      app: comment-backend                                     # Selects the pods with label app: posts-backend which deployment object should manage
  template:                                                    # Provides template for creating new pods
    metadata:
      labels:
        app: comment-backend                                   # Specifies new pod should be created with label app: comment-backend
    spec:                                                      # Provides specification to pod
      containers:                                                
        - name: comment-backend                                # Assings name to container inside pod
          image: rajatpathak/comment-backend                   # Specifies docker image to be used for container

---                                                            # --- is used to write multiple objects in an .yaml file

# Here we'll specify another object cluster IP service to communicate between diff pods

apiVersion: v1
kind: Service
metadata:
  name: comment-backend-srv                                    # Name of service created
spec:                                                          # Provides specifications for the service
  type: ClusterIP                                              # Mentions type of service created here we've created ClusterIP (Here even if we don't provide type k8s will by default create ClusterIP service)
  selector:
    app: comment-backend                                       # selector selects pod with label app: comment-backend and forward request to that
  ports:
    - name: comment-backend                                    # Name of ports attached to service, just for logging purpose [ - mentions array in kubernetes object file, means array of ports ]
      protocol: TCP
      port: 4001                                               # Mentions port to which Service would listen to
      targetPort: 4001                                         # Mentions port of pod which service will send incoming request
